fixed warnings: removed unused imports, replaced deprecated calls